Collapse neoforge package, basic impl of room upgrade list